--- a/libPImportWebServer/Makefile
+++ b/libPImportWebServer/Makefile
@@ -2,21 +2,14 @@ include $(THEOS)/makefiles/common.mk
 
 LIBRARY_NAME = libPImportWebServer
 
-libPImportWebServer_FILES += /mnt/d/codes/PImport/libPImportWebServer/PImportWebServer.m /mnt/d/codes/PImport/libPImportWebServer/PImportWebServerConnection.m /mnt/d/codes/PImport/libPImportWebServer/PImportWebServerDataResponse.m 
-libPImportWebServer_FILES += /mnt/d/codes/PImport/libPImportWebServer/PImportWebServerFileRequest.m /mnt/d/codes/PImport/libPImportWebServer/PImportWebServerFileResponse.m /mnt/d/codes/PImport/libPImportWebServer/PImportWebServerFunctions.m 
-libPImportWebServer_FILES += /mnt/d/codes/PImport/libPImportWebServer/PImportWebServerRequest.m /mnt/d/codes/PImport/libPImportWebServer/PImportWebServerResponse.m /mnt/d/codes/PImport/libPImportWebServer/PImportWebServerStreamedResponse.m 
-libPImportWebServer_FILES += /mnt/d/codes/PImport/libPImportWebServer/PImportWebServerURLEncodedFormRequest.m /mnt/d/codes/PImport/libPImportWebServer/PImportWebServerMultiPartFormRequest.m 
-libPImportWebServer_FILES += /mnt/d/codes/PImport/libPImportWebServer/PImportWebServerDataRequest.m /mnt/d/codes/PImport/libPImportWebServer/PImportWebServerErrorResponse.m
-libPImportWebServer_FILES += /mnt/d/codes/PImport/libPImportWebServer/PImportWebUploader.m
+$(LIBRARY_NAME)_FILES = $(wildcard /mnt/d/codes/PImport/libPImportWebServer/*.m)
 
-libPImportWebServer_INSTALL_PATH = /usr/lib
-libPImportWebServer_FRAMEWORKS = UIKit Foundation CoreFoundation CydiaSubstrate CFNetwork MobileCoreServices AssetsLibrary Photos
-libPImportWebServer_CFLAGS = -fobjc-arc -std=c++11
-libPImportWebServer_LDFLAGS = -lz -Wl,-segalign,4000
+$(LIBRARY_NAME)_INSTALL_PATH = /usr/lib
+$(LIBRARY_NAME)_FRAMEWORKS = UIKit Foundation CoreFoundation CFNetwork MobileCoreServices AssetsLibrary Photos
+$(LIBRARY_NAME)_CFLAGS = -fobjc-arc -std=c++11
+$(LIBRARY_NAME)_LDFLAGS = -lz -Wl,-segalign,4000
 
-libPImportWebServer_ARCHS = armv7 arm64
-export ARCHS = armv7 arm64
+$(LIBRARY_NAME)_ARCHS = armv7 armv7s arm64 arm64e
+export ARCHS = armv7 armv7s arm64 arm64e
 
 include $(THEOS_MAKE_PATH)/library.mk
-
-
